@@ -1173,8 +1173,14 @@ char * hb_itemStr( PHB_ITEM pNumber, PHB_ITEM pWidth, PHB_ITEM pDec )
                s_dInfinity = -log( 0 );
                s_bInfinityInit = TRUE;
             }
-
-            if( pNumber->item.asDouble.length == 99 || dNumber == s_dInfinity || dNumber == -s_dInfinity )
+            if( pNumber->item.asDouble.length == 99
+            #ifdef __BORLANDC__
+               /* No more checks for Borland C, which returns 0 for log( 0 ),
+                  and is therefore unable to test for infinity */
+            #else
+               || dNumber == s_dInfinity || dNumber == -s_dInfinity
+            #endif
+            )
                /* Numeric overflow */
                iBytes = iSize + 1;
             else
